유튜브 클론코딩 첫번째

--- a/views/join.pug
+++ b/views/join.pug
@@ -1,4 +1,13 @@
 extends layout/main
 
 block content
-    p join!
+    .form-container
+        form(action=routes.join, method="post") <!--메소드는 get으로 하면 모든 정보가 url에 보이게되어 post로 해서 비밀로 유지해야한다.-->
+            input(type="text", name="name", placeholder="Full Name",required=true)        
+            input(type="email", name="email", placeholder="Email",required=true)
+            input(type="password", name="password", placeholder="Password",required=true)
+            input(type="password", name="password2", placeholder="Verify Password",required=true)
+            input(type="submit", value="Join Now")
+        include partials/socialLogin
+
+            
