--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,11 @@
 extends layout/main
 
 block content
-    p editProfile!
+    .from-container
+        form(action=routes.editProfile, method="post")
+            label(for="avatar") Avatar
+            input(type="file", id="avatar", name="avatar")
+            input(type="text", placeholder="Name", name="name")
+            input(type="email", placeholder="Email", name="email")
+            input(type="submit", value="Update Profile")
+        a.form-container(href=`/users${routes.changePassword}`) Change Password
